Fix pattern typechecking in the presence of this